# text_editor_cpp

./: .gitignore  CMakeLists.txt  README.md
integration_tests/: CMakeLists.txt
integration_tests/modify_buffer/: CMakeLists.txt  integration.cpp
integration_tests/open_file/: CMakeLists.txt  integration.cpp  test_file.txt
integration_tests/quit/: CMakeLists.txt  integration.cpp
integration_tests/write_file/: CMakeLists.txt  integration.cpp
src/: CMakeLists.txt
src/UI/: CMakeLists.txt
src/UI/display/: CMakeLists.txt  display.cpp  display.h
src/UI/iohandler/: .CMakeLists.txt.swp  .iohandler.h.swp  CMakeLists.txt  inputevent.h  inputtype.h  iohandler.cpp  iohandler.h
src/buffer/: CMakeLists.txt  gapbuffer.cpp  gapbuffer.h
src/commandobject/: CMakeLists.txt  cmd_obj.h
src/commandparser/: CMakeLists.txt  cmdparser.cpp  cmdparser.h
src/commandrunner/: .cmdrunner.cpp.swp  CMakeLists.txt  cmdrunner.cpp  cmdrunner.h  cmdrunstatus.h  cmdruntype.h  cmdstatus.h  cmdtype.h  runstatus.h
src/cursorsyncer/: CMakeLists.txt  cursorsyncer.cpp  cursorsyncer.h
src/editorcore/: CMakeLists.txt  editorcore.cpp  editorcore.h
src/editorstate/: CMakeLists.txt  editorstate.cpp  editorstate.h
src/filemanager/: CMakeLists.txt  filemanager.cpp  filemanager.h  filestatus.h
src/main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/UI/: CMakeLists.txt
tests/UI/display/: CMakeLists.txt  manual.cpp  unittest.cpp
tests/UI/display/manual/: CMakeLists.txt  manual.cpp
tests/UI/iohandler/: CMakeLists.txt  unittest.cpp
tests/commandparser/: CMakeLists.txt  unittest.cpp
tests/commandrunner/: CMakeLists.txt  unittest.cpp
tests/cursorsyncer/: CMakeLists.txt  unittest.cpp
tests/cursorsyncer/newlines_stacked/: unittest.cpp
tests/filemanager/: CMakeLists.txt  unittest.cpp  unittest_no_constructor.cpp
tests/filemanager/test_path/: dummy_target.txt
tests/gapbuffer/: CMakeLists.txt  unittest.cpp
tests/gapbuffer/case_after_grow/: .unittest.cpp.swp  unittest.cpp
tests/gapbuffer/case_newlines_stacked/: unittest.cpp
