cmake_minimum_required(VERSION 3.14)
project(text_editor)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(Curses REQUIRED)
enable_testing()

add_subdirectory(gtest)
add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(integration_tests)
